fix: added word-wrap to address overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,31 +17,25 @@
     --tooltip-shadow: rgba(0, 0, 0, 0.24);
     --switch-background: var(--gray-300);
     --hub-hero-content: rgba(255, 255, 255, 0.8);
-    --gradient-main: linear-gradient(
-      102.7deg,
-      rgba(185, 185, 241, 0.2) 0%,
-      rgba(84, 132, 234, 0.2) 51.56%,
-      rgba(58, 142, 137, 0.2) 100%
-    );
+    --gradient-main: linear-gradient(102.7deg,
+        rgba(185, 185, 241, 0.2) 0%,
+        rgba(84, 132, 234, 0.2) 51.56%,
+        rgba(58, 142, 137, 0.2) 100%);
     --feedback-gradient: var(--gradient-main);
     --table-box-shadow: 0 14px 66px rgba(0, 0, 0, 0.07),
       0 10px 17px rgba(0, 0, 0, 0.03), 0 4px 7px rgba(0, 0, 0, 0.05);
     --table-item-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 
-    --gradient-banner: radial-gradient(
-      155% 100% at 50% 0%,
-      rgba(201, 179, 245, 0.16) 0%,
-      rgba(201, 179, 245, 0.48) 33%,
-      rgba(136, 170, 241, 0.16) 66%,
-      rgba(255, 255, 255, 0) 100%
-    );
+    --gradient-banner: radial-gradient(155% 100% at 50% 0%,
+        rgba(201, 179, 245, 0.16) 0%,
+        rgba(201, 179, 245, 0.48) 33%,
+        rgba(136, 170, 241, 0.16) 66%,
+        rgba(255, 255, 255, 0) 100%);
 
-    --banner-grid-gradient: linear-gradient(
-      90deg,
-      rgba(127, 127, 213, 0.2) 0%,
-      rgba(132, 145, 221, 0.2) 50%,
-      rgba(145, 234, 228, 0.2) 100%
-    );
+    --banner-grid-gradient: linear-gradient(90deg,
+        rgba(127, 127, 213, 0.2) 0%,
+        rgba(132, 145, 221, 0.2) 50%,
+        rgba(145, 234, 228, 0.2) 100%);
     --search-background: var(--background);
   }
 
@@ -50,26 +44,20 @@
     --tooltip-shadow: rgba(255, 255, 255, 0.24);
     --switch-background: rgba(255, 255, 255, 0.24);
     --hub-hero-content: rgba(34, 34, 34, 0.8);
-    --gradient-main: linear-gradient(
-      102.7deg,
-      rgba(185, 185, 241, 0.2) 0%,
-      rgba(84, 132, 234, 0.2) 51.56%,
-      rgba(58, 142, 137, 0.2) 100%
-    );
-    --feedback-gradient: linear-gradient(
-      83.46deg,
-      #2c2c32 7.03%,
-      #44404d 52.42%,
-      #303038 98.77%
-    );
+    --gradient-main: linear-gradient(102.7deg,
+        rgba(185, 185, 241, 0.2) 0%,
+        rgba(84, 132, 234, 0.2) 51.56%,
+        rgba(58, 142, 137, 0.2) 100%);
+    --feedback-gradient: linear-gradient(83.46deg,
+        #2c2c32 7.03%,
+        #44404d 52.42%,
+        #303038 98.77%);
     --table-box-shadow: 0 14px 66px hsla(0, 0%, 96.1%, 0.07),
       0 10px 17px hsla(0, 0%, 96.1%, 0.03), 0 4px 7px hsla(0, 0%, 96.1%, 0.05);
     --table-item-box-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.1);
-    --banner-grid-gradient: linear-gradient(
-      90deg,
-      rgba(172, 182, 229, 0.08) 0%,
-      rgba(134, 253, 232, 0.08) 100%
-    );
+    --banner-grid-gradient: linear-gradient(90deg,
+        rgba(172, 182, 229, 0.08) 0%,
+        rgba(134, 253, 232, 0.08) 100%);
     --search-background: #4c4c4c;
   }
 }
@@ -138,8 +126,8 @@
   li {
     margin-bottom: calc(1.45rem / 2);
 
-    & > ol,
-    & > ul {
+    &>ol,
+    &>ul {
       margin-inline-start: 1.45rem;
       margin-block: calc(1.45rem / 2);
       margin-top: calc(1.45rem / 2);
@@ -149,7 +137,7 @@
       @apply last:mb-0;
     }
 
-    & > p {
+    &>p {
       margin-bottom: calc(1.45rem / 2);
     }
   }
@@ -159,4 +147,11 @@
   .animate-pause {
     animation-play-state: paused;
   }
+}
+
+/* TODO: Address overflow at REVERSE ENGINEERING A CONTRACT */
+/* Added a fix to https://github.com/ethereum/ethereum-org-website/issues/14092 
+*/
+article#main-content>p:first-of-type {
+  word-wrap: break-word;
 }
